<resources>
    <string name="app_name">PetSeguroApp</string>
    <string name="titulo">Pet Seguro</string>
    <string name="usuarioText">Usuario</string>
    <string name="contraseñaText">Contraseña</string>
    <string name="repContraseña">Repite tu contraseña</string>
    <string name="correoText">Correo</string>
    <string name="registroText">Registrarse</string>
    <string name="inciarText">Iniciar</string>
    <string name="inciarSesionText">Iniciar sesión</string>
    <string name="menuCalendario">Calendario</string>
    <string name="menuPreguntasFrec">Preguntas frecuentes</string>
    <string name="menuMisMascotas">Mis mascotas</string>
    <string name="menuEntrenamiento">Entrenamiento</string>
    <string name="menuAgendarCita">Agendar cita</string>
    <string name="menuCerrarSesion">Cerrar sesión</string>
    <string name="registroMascota">Registro mascota</string>
    <string name="agregarMascota">Agregar mascota</string>
    <string name="raza">Raza</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="cuidados_especiales">Cuidados especiales</string>
    <string name="cuidado_especial">Cuidado especial</string>
    <string name="mascota">Mascota</string>
    <string name="regresar">Regresar</string>
    <string name="registrar">Registrar</string>
    <string name="listo">Listo</string>
    <string name="tipoDeCita">Tipo de cita</string>
    <string name="seleccioneFecha">Seleccione fecha:</string>
    <string name="notas">Notas</string>
    <string name="notasCitaVeterinario">Citas veterinario del mes</string>
    <string name="notasRutina">Notas rutina</string>
    <string name="notasEventos">Notas eventos</string>
    <string name="editar">Editar mascota</string>
    <string name="eliminar">Eliminar</string>
    <string name="notasdelMes">Notas del mes:</string>
    <string name="guardarNota">Guardar nota</string>
    <string name="respuesta_1">Baño regular: Usa champú suave, no bañes demasiado.\nCepillado frecuente: Elimina el pelo suelto y previene enredos.\nHigiene dental: Cepilla sus dientes para evitar problemas dentales.\nCorte de uñas: Manténlas recortadas para prevenir roturas.\nControl de parásitos: Usa tratamientos regulares contra pulgas y garrapatas.\nAlimentación saludable: Dieta equilibrada para un pelaje sano.\nEjercicio regular: Mantén a tu perro activo.\nVisitas al veterinario: Al menos una vez al año para chequeos y vacunas.</string>
    <string name="respuesta_2">Los mejores juguetes y actividades para perros dependen del tamaño, edad y nivel de energía del perro. Juguetes para masticar, como huesos y cuerdas, son buenos para la salud dental. Los juguetes interactivos, como rompecabezas y lanzadores de pelotas, estimulan mentalmente y mantienen a tu perro activo. Las actividades como caminatas, juegos de búsqueda y adiestramiento básico proporcionan ejercicio físico y mental. Escoge juguetes y actividades que se adapten al tamaño y temperamento de tu perro para mantenerlo feliz y saludable.</string>
    <string name="respuesta_3">Los requisitos de vacunación para perros suelen incluir vacunas contra la rabia, moquillo y parvovirus. Desparasitación interna es necesaria para lombrices y tenias, mientras que la desparasitación externa protege contra pulgas y garrapatas.</string>
    <string name="entrenamiento_1">1. Ten premios a la mano.\n\n2. Usa un comando y gesto.\n\n3. Premia cuando se siente.\n\n4. Repite y sé consistente."</string>
    <string name="entrenamiento_2">"1. Preparar ambiente.\n2. Establecer señales.\n3. Posición inicial.\n4. Atraer atención.\n5. Incentivar con golosina.\n6. Recompensar.\n7. Practicar y supervisar."</string>
    <string name="entrenamiento_3">"1. Preparar ambiente y golosinas.\n2. Sentarse frente al perro con golosina.\n3. Atraer atención.\n4. Orden \"pata\", recompensar al levantarla.\n5. Repetir y elogiar.\n6. Agregar señal visual.\n7. Practicar en diferentes lugares."</string>
</resources>