<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDC78"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="62dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginBottom="78dp"
        android:background="@color/naranjaFranja"
        />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/itim"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/naranjaTitulo"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/etUsuario"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/usuarioText"
        android:inputType="text"
        android:textColorHint="@color/naranjaHint"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="214dp" />

    <EditText
        android:id="@+id/etcorreo"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/correoText"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/naranjaHint"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="91dp"
        android:layout_marginLeft="80dp"
        tools:layout_editor_absoluteY="288dp" />

    <EditText
        android:id="@+id/etcontrasenia"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/contraseñaText"
        android:layout_marginLeft="80dp"
        android:inputType="textPassword"
        android:textColorHint="@color/naranjaHint"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/etrepCont"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="80dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/itim"
        android:hint="@string/repContraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/naranjaHint"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="460dp" />

    <Button
        android:id="@+id/btnregistrarse"
        android:layout_width="229dp"
        android:layout_height="70dp"
        android:layout_marginLeft="80dp"
        android:backgroundTint="@color/naranjaTitulo"
        android:fontFamily="@font/itim"
        android:text="@string/registroText"
        android:textSize="28dp"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="567dp" />


</LinearLayout>