<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDC78"
    android:orientation="vertical"
    tools:context=".AgendarCitaActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="62dp">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/itim"
        android:text="@string/menuCalendario"
        android:textAlignment="center"
        android:textColor="@color/naranjaTitulo"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/etRaza"
        tools:layout_editor_absoluteX="0dp" />



    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="314dp"
        android:layout_height="243dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:selectedWeekBackgroundColor="@color/naranjaOscuro"
        android:weekNumberColor="@color/naranjaTexto"
        android:weekSeparatorLineColor="@color/naranjaTexto" />

    <GridLayout
        android:id="@+id/glNota"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:columnCount="1"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/tvNotaMes"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/itim"
            android:text="@string/notasdelMes"
            android:textColor="@color/naranjaFranja"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNota"
            android:layout_width="364dp"
            android:layout_height="103dp"
            android:layout_row="1"
            android:layout_column="0"
            android:ems="10"
            android:gravity="start|top"
            android:textColor="@color/naranjaOscuro"
            android:inputType="textMultiLine" />




    </GridLayout>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/naranjaFranja"
        android:fontFamily="@font/itim"
        android:text="@string/regresar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp" />


</LinearLayout>